MVP listo para despliegue en Render

--- a/catalogo/Templates/catalogo/checkout.html
+++ b/catalogo/Templates/catalogo/checkout.html
@@ -55,11 +55,12 @@
                                 <input type="radio" name="metodo_pago" value="Transferencia" class="me-2">
                                 Transferencia bancaria
                             </label>
-
+                            <!--Boton Wompi 
                             <label class="d-flex align-items-center">
                                 <input type="radio" name="metodo_pago" value="Wompi" class="me-2">
                                 Tarjeta débito / crédito / PSE (Wompi)
                             </label>
+                            -->
                         </div>
 
                         <button type="submit" class="btn btn-primary-custom w-100">Confirmar pedido</button>
