--- a/catalogo/Templates/catalogo/confirmacion_pedido.html
+++ b/catalogo/Templates/catalogo/confirmacion_pedido.html
@@ -102,7 +102,7 @@
 
             {% if pedido.metodo_pago == "Transferencia" %}
                 <p class="text-muted mt-2">
-                    Una vez realices la transferencia, envíanos el comprobante por WhatsApp para procesar tu pedido 📲
+                    Una vez realices la transferencia, envíanos el comprobante por WhatsApp al +57-(322) 233 6338 para procesar tu pedido 📲
                 </p>
             {% else %}
                 <p class="text-success">Estamos preparando tu pedido. Te avisaremos cuando esté en camino 🚚</p>
