MVP final listo para migración y defensa

--- a/catalogo/Templates/base.html
+++ b/catalogo/Templates/base.html
@@ -37,6 +37,11 @@
                 </span>
             {% endif %}
             </a>
+
+            <a class="navbar-brand brand-title" href="{% url 'panel_inicio' %}">
+              <class="text"> Panel Administrativo
+            </a>
+            
           </li>
           </div>
 
