--- a/catalogo/Templates/catalogo/confirmacion_pedido.html
+++ b/catalogo/Templates/catalogo/confirmacion_pedido.html
@@ -130,6 +130,10 @@
             <div class="mt-4">
                 <a href="{% url 'lista_productos' %}" class="btn btn-primary-custom me-2">Seguir comprando</a>
             </div>
+            <div class="mt-4">
+                <button class="btn btn-secondary" onclick="window.print()">  
+                    Imprimir confirmación </button>
+            </div>
         </div>
     </div>
 </div>
