--- a/catalogo/Templates/catalogo/base_panel.html
+++ b/catalogo/Templates/catalogo/base_panel.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+
     <meta charset="UTF-8">
     <title>{% block title %}Panel Administrativo{% endblock %}</title>
 
@@ -26,12 +27,23 @@
 </head>
 
 <body>
-
     {% include 'catalogo/panel_sidebar.html' %}
+        
+        <main class="content-wrapper">
 
-    <main class="content-wrapper">
-        {% block content %}{% endblock %}
-    </main>
+            {% if messages %}
+                <div class="container mt-3">
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+
+            {% block content %}{% endblock %}
+        </main>
 
 </body>
 </html>
