--- a/catalogo/Templates/catalogo/panel_sidebar.html
+++ b/catalogo/Templates/catalogo/panel_sidebar.html
@@ -51,6 +51,10 @@
     <div class="text-white small">
         Bienvenido(a), <strong>{{ request.user.username }}</strong>
     </div>
+
+    <a href="{% url 'lista_productos' %}" class="btn btn-secondary">
+        ← Volver al catálogo
+    </a>
     
     <form action="{% url 'admin_logout' %}" method="post" class="mt-3">
     {% csrf_token %}
