Sprint: Mejoras visuales en login, Reportes y panel administrativo

--- a/catalogo/Templates/base.html
+++ b/catalogo/Templates/base.html
@@ -37,10 +37,6 @@
                 </span>
             {% endif %}
             </a>
-
-            <a class="navbar-brand brand-title" href="{% url 'panel_inicio' %}">
-              <class="text"> Panel Administrativo
-            </a>
             
           </li>
           </div>
@@ -88,6 +84,9 @@
   <div class="text-center mt-3">
     <small>© 2025 Sr. Cheesecake · Postres artesanales</small>
   </div>
+  <a class="text-center mt-3" href="{% url 'panel_inicio' %}">
+      <small> Panel Administrativo </small>
+  </a>
 </footer>
 
 </body>
