--- a/catalogo/Templates/catalogo/admin_inventario.html
+++ b/catalogo/Templates/catalogo/admin_inventario.html
@@ -1,7 +1,7 @@
 {% extends "catalogo/base_panel.html" %}
 
 
-{% block title %}Inventario | Panel Admin{% endblock %}
+{% block title %}Inventario | Panel Administrativo {% endblock %}
 
 {% block content %}
 <div class="container my-4">
