--- a/catalogo/Templates/catalogo/panel_inicio.html
+++ b/catalogo/Templates/catalogo/panel_inicio.html
@@ -1,6 +1,6 @@
 {% extends "catalogo/base_panel.html" %}
 
-{% block title %}Panel Administrativo | Sr. Cheesecake{% endblock %}
+{% block title %} Dashboard | Panel Administrativo{% endblock %}
 
 {% block content %}
 <div class="container my-4">
