--- a/catalogo/Templates/catalogo/panel_sidebar.html
+++ b/catalogo/Templates/catalogo/panel_sidebar.html
@@ -53,7 +53,7 @@
     </div>
 
     <a href="{% url 'lista_productos' %}" class="btn btn-secondary">
-        ← Volver al catálogo
+        ← Volver al Sitio Web
     </a>
     
     <form action="{% url 'admin_logout' %}" method="post" class="mt-3">
