--- a/catalogo/Templates/catalogo/admin_login.html
+++ b/catalogo/Templates/catalogo/admin_login.html
@@ -6,7 +6,7 @@
     <title>Panel Administrativo | Sr. Cheesecake</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -105,14 +105,22 @@
                         <input type="text" name="username" class="form-control" required>
                     </div>
 
-                    <div class="mb-3">
-                        <label class="form-label">Contraseña</label>
-                        <input type="password" name="password" class="form-control" required>
+                    <div class="input-group mb-3">
+                     
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña">
+                        <button class="btn btn-outline-secondary" type="button" onclick="togglePassword()">
+                            <i class="fas fa-eye"></i>
+                        </button>
                     </div>
+
 
                     <button class="btn btn-primary-custom w-100">
                         Ingresar al panel
                     </button>
+
+                    <div class="mt-3 text-center">
+                        <a href="{% url 'reset_password' %}">¿Olvidaste tu contraseña?</a>
+                    </div>
                 </form>
 
                 {% if form.errors %}
@@ -121,11 +129,27 @@
                     </div>
                 {% endif %}
             </div>
-
         </div>
 
     </div>
+
+    <script>
+    function togglePassword() {
+  const input = document.getElementById('password');
+  const icon = event.currentTarget.querySelector('i');
+  if (input.type === 'password') {
+    input.type = 'text';
+    icon.classList.remove('fa-eye');
+    icon.classList.add('fa-eye-slash');
+  } else {
+    input.type = 'password';
+    icon.classList.remove('fa-eye-slash');
+    icon.classList.add('fa-eye');
+  }
+}
+</script>
 </div>
 
 </body>
 </html>
+
